--- a/source/assets/scss/views/blog-section.scss
+++ b/source/assets/scss/views/blog-section.scss
@@ -6,19 +6,15 @@
 @import '../mixins/functions';
 // @import '../mixins/animation';
 // @import '../vendor/slick';
-// @import '../modules/masonry';
+@import '../modules/blog';
 // @import '../modules/fonts-optional';
 
 $gap: calc(1rem + 2vw);
 body.blog {
     background-color: $gray-10;
 }
-// .item {
-//     // background-color: $gray-5;
+// .post-card {
 // }
-.post-card {
-    padding: 1rem 1.5rem;
-}
 .item {
     transition: box-shadow $timing-default;
     @include shadow-anarchy(0 .2rem .5rem 0 hsla(220, 90%, 13%, 0.2));
@@ -39,6 +35,7 @@ body.blog {
         margin-bottom: 2rem;
     }
     .post-card {
+        padding: 1rem 1.5rem;
         @include breakpoint (medium) {
             min-width: 20rem;
             max-width: 45rem;
@@ -51,21 +48,26 @@ body.blog {
         grid-gap: $gap;
         grid-template-columns: 6;
     }
+    .post-card {
+        padding: calc(1rem + 0.6vw);
+    }
     .item {
         align-items: flex-end;
         display: flex;
         flex-direction: row;
         grid-column: 1 / span 3;
-        min-height: calc(20rem + 14vw);
-        // padding-top: 20vw; // creates gap above tab, for an image or whatever
+        min-height: calc(20rem + 14vw); // key here for opening space for images
+        .media-object { // person-card component overrides
+            margin-bottom: 0;
+        }
+        .avatar--large {
+            width: 3rem;
+        }
         &:nth-child(n+3){ // adjust things as they go down
             font-size: 95%;
             min-height: calc(10rem + 14vw);
             .headline-4 {
                 font-size: 1.3rem;
-            }
-            .avatar--large {
-                width: 3rem;
             }
         }
     }
@@ -98,18 +100,15 @@ body.blog {
     // typical desktop
     @include breakpoint(large) {
         .item-0 {
-            // padding-top: 30vw;
             grid-column: 1 / span 3;
             grid-row: 1;
         }
         .item-1 {
-            // padding-top: 20vw;
             grid-column: 1 / span 2;
             grid-row: 2;
         }
         .item-2 {
             // align-items: start;
-            // padding-top: 0;
             grid-column: 3 ;
             grid-row: 2 / span 2;
         }
@@ -122,13 +121,11 @@ body.blog {
             grid-row: 3 ;
         }
         .item-3, .item-4 {
-            // padding-top: 10vw;
         }
     }
     // ultra-wide
     @include breakpoint(xxlarge) {
         .item-0 {
-            // padding-top: 20vw;
             grid-column: 1 / span 2;
             grid-row: 1;
         }
@@ -171,8 +168,3 @@ $bg-height: calc(8rem + 16vw);
     }
 }
 
-
-// hubspot disclaimer, I do not want thee
-.legal-consent-container {
-    display: none;
-}
